--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,12 @@ body {
   margin: 10px 20px;
   padding: 20px 20px;
   text-align: center;
+  
 
 
+}
+.link-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
